# creative-cat

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: Diogenes.md  Locations.md  README.md  Roadmap.md
doc/gameplay/: Description.md  Items.md  Level.md  Mechanics.md  gameplay.md
doc/gameplay/enemies/: Bat.md  TODO.md
doc/gameplay/enemies/bosses/: TODO.md
doc/gameplay/items/: TODO.md
doc/gameplay/player/: Barrel.md  Cat.md
doc/gameplay/player/barel/: Bombs.md
doc/gameplay/player/projectiles/: Bomb.md
doc/gameplay/traps/: TODO.md
src/: lib.rs  main.rs  settings.rs
src/camera/: mod.rs
src/enemy/: mod.rs  movement.rs
src/level/: mod.rs
src/level/map/: builder.rs  mod.rs
src/player/: assets.rs  mod.rs
src/player/mods/: cat.rs  mod.rs
src/ui/: menu.rs  mod.rs
