[package]
name = "creative-cat"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"


[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.29.1"
bevy_ecs_tilemap = "0.15.0"
bevy_rapier2d = "0.29.0"
bevy_spritesheet_animation = "2.0.0"
rand = "0.9.0"
